force-app/main/default/objects/SCC_Legacy_Case__mdt/SCC_Legacy_Case__mdt.object-meta.xml
<CustomObject>
    <label>SCC Legacy Case</label>
    <pluralLabel>SCC Legacy Case</pluralLabel>
</CustomObject>