force-app/main/default/objects/SCC_Legacy_Case__mdt/fields/Closure_Comment__c.field-meta.xml
<CustomField>
    <fullName>Closure_Comment__c</fullName>
    <label>Closure Comment</label>
    <type>TextArea</type>
</CustomField>