force-app/main/default/objects/SCC_Legacy_Case__mdt/fields/SCC_Resolution_Category__c.field-meta.xml
<CustomField>
    <fullName>SCC_Resolution_Category__c</fullName>
    <label>Resolution Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transactional/Fraud without Refund</fullName>
                <default>true</default>
                <label>Transactional/Fraud without Refund</label>
            </value>
            <value>
                <fullName>Transactional/Fraud with Refund</fullName>
            </value>
            <value>
                <fullName>Non-Transactional</fullName>
            </value>
            <value>
                <fullName>Dokumen Tidak Lengkap</fullName>
            </value>
            <value>
                <fullName>Tidak Mengirimkan Notifikasi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>