force-app/main/default/objects/SCC_Legacy_Case__mdt/validationRules/Mandatory_Closure_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Closure_Comment</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Closure_Comment__c ) , TEXT( Status__c )=&apos;Closed&apos; )</errorConditionFormula>
    <errorDisplayField>Closure_Comment__c</errorDisplayField>
    <errorMessage>Closure Comment / Komentar penutupan tidak boleh kosong !</errorMessage>
</ValidationRule>